// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: active radio button 1`] = `
<input
  checked=""
  class="ant-radio-input"
  type="radio"
  value="true"
/>
`;

exports[`renders correctly: disabled radio button 1`] = `
<input
  class="ant-radio-input"
  type="radio"
  value="false"
/>
`;
